/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)

===============================================================================

2007-05-28
	* Fix a KeyError in itrade_wxquote.py, line 1083

2007-05-20  Gilles Dumortier <dgil at ieee.org>
	* modify barchart plugin to import TORONTO markets
	* change "TSX" and "TSE" to "TORONTO EXCHANGE" and "TORONTO VENTURE"
	* Order by %-Autorefresh on: view unstable (SF bug 1722052)
	* News : UnicodeDecodeError when click on boursorama (SF bug 1651029)
	* News : Freshness of information (SF 1649267)
	* Portfolio : Main Market and Currency can't be edited
	* Indices from US market should not have local market yahoo suffix !
	* Quote view : display Yahoo intraday graph for LSE markets
	* Be sure LSE ticker is valid (remove '.' at the end) (SF bug 1719653)
	* Quotes View - changing quote keep the current page (SF bug 1632171)
	* Be sure a connector is only once in the property list of connectors
	* Fix an issue with % on live for some connectors
	* Connectors should be global properties of the quote (SF bug 1642791)

2007-05-19  Gilles Dumortier <dgil at ieee.org>
	* Fix a refresh problem when changing the quote in the quote view
	* Fix an issue with market not loaded (SF bug 1721820)
	* column sorting persistence (SF bug 1481717) incl. dynamic sorting
	* able to sort on any column of the matrix

2007-05-18  Gilles Dumortier <dgil at ieee.org>
	* Fill Grid pane with quote historical data
	* get currencies from the network : can't when "-d" option is used !
	* bad display of erase cache dialog box (SF bug 1701785) - implement
	  iTradeDialog() which use sized_controls package
	* Some information on wxaddons missing on some Linux distro

2007-05-17  Gilles Dumortier <dgil at ieee.org>
	* some code to test column sorting

2007-05-15  Gilles Dumortier <dgil at ieee.org>
	* r721 : list of portfolio not sorted (SF bug 1718941)